src/test/deca/syntax/valid/assign_simple.deca

// Description :
// Affectation simple (sera vérifiée en contexte plus tard)
//
// Resultats :
// ok
//

{
    x = 1 ;
}