src/test/deca/syntax/invalid/assign_missing_expr.deca

// Description :
    // Affectation avec expression manquante
    //
    // Resultats :
    // Erreur syntaxique
    // mismatched input ';'
    // Regle : assign_expr : or_expr ('=' assign_expr)?

{
    x= ;
}